--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-particles": "^2.6.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "react-web-share": "^2.0.2",
     "tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
